@@ -50,10 +50,11 @@ namespace boost {
 namespace wave { 
 namespace grammars {
 
+///////////////////////////////////////////////////////////////////////////////
 namespace closures {
 
     struct intlit_closure 
-    :   boost::spirit::closure<intlit_closure, unsigned long> 
+    :   boost::spirit::closure<intlit_closure, uint_literal_type> 
     {
         member1 val;
     };
@@ -103,7 +104,7 @@ struct intlit_grammar :
 
                     hex_lit =
                             (ch_p('X') | ch_p('x'))
-                        >>  uint_parser<unsigned long, 16>()
+                        >>  uint_parser<uint_literal_type, 16>()
                             [
                                 self.val = arg1,
                                 var(self.is_unsigned) = true
@@ -111,7 +112,7 @@ struct intlit_grammar :
                     ,
                         
                     oct_lit =
-                       !uint_parser<unsigned long, 8>()
+                       !uint_parser<uint_literal_type, 8>()
                         [
                             self.val = arg1,
                             var(self.is_unsigned) = true
@@ -119,7 +120,7 @@ struct intlit_grammar :
                     ,
                         
                     dec_lit =
-                        int_parser<long, 10>()
+                        uint_parser<uint_literal_type, 10>()
                         [
                             self.val = arg1
                         ]
@@ -158,14 +159,14 @@ struct intlit_grammar :
 
 template <typename TokenT>
 BOOST_WAVE_INTLITGRAMMAR_GEN_INLINE 
-unsigned long 
+uint_literal_type 
 intlit_grammar_gen<TokenT>::evaluate(TokenT const &token, 
     bool &is_unsigned)
 {
     using namespace boost::spirit;
     
 intlit_grammar g(is_unsigned);
-unsigned long result = 0;
+uint_literal_type result = 0;
 typename TokenT::string_type const &token_val = token.get_value();
 parse_info<typename TokenT::string_type::const_iterator> hit =
     parse(token_val.begin(), token_val.end(), g[spirit_assign_actor(result)]);
